--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -17,16 +17,44 @@
 
 header {
 	grid-area: header;
-	background: green;
+	background: var(--dark);
 	padding: 20px;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	align-items: center;
+	a {
+		color: white;
+	}
+	.header-brand {
+		font-size: 4rem;
+		font-weight: 700;
+	}
+	ul {
+		display: flex;
+		li {
+			.header-nav {
+				font-size: 1.8rem;
+				padding: 0 10px;
+			}
+			.active {
+				font-weight: 700;
+				text-decoration: underline;
+			}
+		}
+	}
 }
 
 .content {
 	grid-area: content;
-	padding: 20px;
+	padding: 2rem;
 }
 
 footer {
 	grid-area: footer;
-	padding: 20px;
+	padding: 2rem;
+	background: var(--dark-grey);
+	font-size: 1.8rem;
+	text-align: center;
+	color: white;
 }
